# hive-agent

./: .gitignore  Cargo.toml  package_release.ps1
hive-agent/: Cargo.toml  build_conn_log.txt  log.txt  wsl_build_log.txt
hive-agent/scripts/: expose_wsl.ps1  setup_llama.sh
hive-agent/src/: check_struct.rs  compute.rs  http_api.rs  inference.rs  main.rs  message.rs  p2p.rs  scheduler.rs  storage.rs
hive-agent/src/backend/: llama_cpp.rs  mod.rs
hive-agent/src/model/: mod.rs  sharded_llama.rs
hive-core/: Cargo.toml
hive-core/src/: lib.rs
hive-dashboard/: index.html  package-lock.json  package.json
hive-dashboard/src/: App.tsx  HiveDashboard.tsx
hive-wasm/: Cargo.toml
hive-wasm/src/: lib.rs
