[package]
name = "hive-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "dns", "quic", "noise", "yamux", "mdns", "gossipsub", "macros", "tokio", "websocket"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hive-core = { path = "../hive-core" }
futures = "0.3.31"
sha2 = "0.10.9"
hex = "0.4.3"
ndarray = "0.17.1"
rand = "0.9.2"
candle-core = { git = "https://github.com/huggingface/candle.git", features = [] }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
tokenizers = "0.22.1"
axum = { version = "0.8.1", features = ["multipart"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] } # Added stream for download
local-ip-address = "0.6.1"


[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
wgpu = [] # WGPU requires 'candle-wgpu' crate, disabling for now to fix build conflict
accelerate = ["candle-core/accelerate"] # For Mac users
mkl = ["candle-core/mkl"] # Intel CPU optimization
